# motte-tmp

./: .gitattributes  .gitignore  Cargo.toml  TODO  clippy.toml  justfile  rustc-ice-2024-03-13T19_35_37-4424.txt  rustfmt.toml
.cargo/: config.toml
assets/shaders/: cel.wgsl  colors.wgsl  edges.wgsl  utils.wgsl
crates/motte/: Cargo.toml
crates/motte/src/: main.rs
crates/motte_lib/: Cargo.toml
crates/motte_lib/src/: app_state.rs  lib.rs  prelude.rs
crates/motte_lib/src/asset_management/: mod.rs
crates/motte_lib/src/core/: active_duration.rs  camera.rs  cleanup.rs  cursor.rs  despawn.rs  mod.rs  previous.rs
crates/motte_lib/src/dev_tools/: mod.rs  perf_ui.rs  side_panel.rs
crates/motte_lib/src/graphics/: mod.rs
crates/motte_lib/src/graphics/materials/: cel.rs  mod.rs
crates/motte_lib/src/graphics/pixelate/: camera.rs  mod.rs  pipeline.rs  snap.rs
crates/motte_lib/src/in_game/: mod.rs
crates/motte_lib/src/movement/: mod.rs  motor.rs
crates/motte_lib/src/navigation/: agent.rs  avoidance.rs  mod.rs  obstacle.rs
crates/motte_lib/src/navigation/boids/: mod.rs
crates/motte_lib/src/navigation/clearpath/: mod.rs
crates/motte_lib/src/navigation/dodgy/: mod.rs
crates/motte_lib/src/navigation/flow_field/: cache.rs  footprint.rs  layout.rs  mod.rs  pathing.rs
crates/motte_lib/src/navigation/flow_field/fields/: flow.rs  mod.rs  obstacle.rs
crates/motte_lib/src/navigation/sonar/: mod.rs
crates/motte_lib/src/physics/: mod.rs
crates/motte_lib/src/player/: camera.rs  mod.rs
crates/motte_lib/src/spells/: mod.rs  projectile.rs
crates/motte_lib/src/stats/: mod.rs  pool.rs  stat.rs
crates/motte_lib/src/utils/: math.rs  mod.rs  trait_ext.rs
crates/motte_macros/: Cargo.toml
crates/motte_macros/src/: bevy_macros.rs  lib.rs  stat.rs
crates/warband/: Cargo.toml
crates/warband/src/: main.rs
crates/warband_lib/: Cargo.toml
crates/warband_lib/src/: app_state.rs  lib.rs  prelude.rs
crates/warband_lib/src/asset_management/: mod.rs
crates/warband_lib/src/core/: camera.rs  cursor.rs  despawn.rs  mod.rs
crates/warband_lib/src/flow_field/: cache.rs  cost.rs  field.rs  flow.rs  goal.rs  layout.rs  mod.rs
crates/warband_lib/src/flow_field/fields/: density.rs  mod.rs  obstacle.rs
crates/warband_lib/src/flowfield/: field.rs  mod.rs
crates/warband_lib/src/graphics/: mod.rs
crates/warband_lib/src/graphics/pixelate/: camera.rs  mod.rs  node.rs  pipeline.rs  pixelate.wgsl  snap.rs
crates/warband_lib/src/in_game/: mod.rs
crates/warband_lib/src/movement/: mod.rs  motor.rs
crates/warband_lib/src/navigation/: agent.rs  avoidance.rs  avoidance_2.rs  mod.rs  obstacle.rs  occupancy.rs  pathing.rs
crates/warband_lib/src/navigation/flow_field/: cache.rs  field.rs  flow.rs  footprint.rs  layout.rs  mod.rs  pathing.rs
crates/warband_lib/src/navigation/flow_field/cost/: density.rs  mod.rs  obstacle.rs
crates/warband_lib/src/navigation/flow_field/fields/: flow.rs  mod.rs  obstacle.rs
crates/warband_lib/src/physics/: character_controller.rs  mod.rs  trait_ext.rs
crates/warband_lib/src/player/: camera.rs
crates/warband_lib/src/stats/: mod.rs  modifier.rs  pool.rs  stat.rs
crates/warband_lib/src/units/: mod.rs
crates/warband_lib/src/util/: bevy_util.rs  math.rs  mod.rs  trait_ext.rs
crates/warband_macros/: Cargo.toml
crates/warband_macros/src/: lib.rs  stat.rs
design/: notes.md  spells.tldr
tools/ci/: Cargo.toml
tools/ci/src/: main.rs
