[package]
name = "motte"
version = "0.1.0"
authors = ["pyrbin <git@pyrbin>"]
edition = "2021"
build = "build.rs"

[features]
dev_tools = ["motte_lib/dev_tools"]
dynamic_linking = ["bevy/dynamic_linking", "motte_lib/dynamic_linking"]

[dependencies.bevy]
workspace = true

[dependencies]
motte_lib = { path = "../motte_lib" }
bevy_embedded_assets = "0.10.2"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.29.15", default-features = false }
image = { version = "0.25.0", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "*"

[build-dependencies]
embed-resource = "2.4.2"